# base-structure

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  ReadMe.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: run_tests_linters.yml  tests.yml
src/: main.py
tests/: test_main.py
